tests/conflict_markers_other_file.sy
use conflict_markers

start :: fn do end

// error: Error::GitConflictError { span: Span { line_start: 3 , .. }, .. }
